# Today_I_Learned

./: .gitignore  README.md
2-2/Computer_Architecture/: 9 1 - Orientation eef1c5251e7c4ae98b5d69534f090214.html  ComputerArchitecture 1Week
Algorithm/1week/: binarytree.c
Algorithm/2week/: 2week-1.c
Algorithm/3week/: 3week_2.c
Algorithm/7week/: 7week_1  7week_3  7week_3.c
Algorithm/9week/: 9week1  9week1.c
BackJun/: 18108.c
BruteForce/: 2231_decompose.c  2798_BlackJack.c
C_Language/: Makefile.md
Datastruct/: Binary_Search  Binary_Search.c
PublicKeyCrypto/: AES.py  DH.py  Diffie-Hellman.py  ElGamal_GUI.py  Elgamal.py  Public Key Cryptography Assignment 6.py  Public Key Cryptography Assignment 7.py  RSA.py  bf_shift.py  otp.py  prime.py  primed.py  rowcol.py  suffle.py  vigenere Cipher.py
aisys/: blocking_test.c  deadlock_hunters.c  double_handler.c  mini_login_sk.c  mini_shell_adv.c  mini_shell_game.c  mini_shell_mode.c  mini_shell_sk.c  mini_wc.c  sscanfd.c  test.js  xsh.c
ctf/: baseencrypt.py
ctf/frontdoor-1/backend/: Cargo.toml
ctf/frontdoor-1/backend/src/: consts.rs  error.rs  main.rs
ctf/frontdoor-1/backend/src/handlers/: flag.rs  health_check.rs  logs.rs  mod.rs  monitor.rs  root.rs  signin.rs
ctf/frontdoor-1/backend/src/middlewares/: authentication.rs  authorization.rs  mod.rs  session_expiry.rs  session_tracing.rs
exploit/: .htaccess  exploit.py  reverseshell.txt  web old31.py  web_old21.py  webhack_old56.py
loginapi/: package-lock.json  package.json
naverlogin/: package-lock.json  package.json
socket program/: t.c
(+319 files in other folders)
